--- a/MulLe/Base.lproj/Main.storyboard
+++ b/MulLe/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
@@ -16,40 +16,40 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="CUv-im-zOK">
-                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                                <rect key="frame" x="0.0" y="118" width="414" height="744"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                                <button key="tableFooterView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="4bB-Mx-nuN">
-                                    <rect key="frame" x="0.0" y="108.5" width="414" height="44"/>
-                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                    <state key="normal" title="Add Data"/>
-                                    <connections>
-                                        <action selector="touchUpAddButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="6sf-1d-O8e"/>
-                                    </connections>
-                                </button>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" id="DyK-Ph-yqi" customClass="CustomTableViewCell" customModule="MulLe" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="28" width="414" height="52.5"/>
+                                        <rect key="frame" x="0.0" y="28" width="414" height="56.5"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="DyK-Ph-yqi" id="BBQ-R8-VJt">
-                                            <rect key="frame" x="0.0" y="0.0" width="414" height="52.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="56.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4st-A8-Y2C">
-                                                    <rect key="frame" x="241" y="11" width="30" height="30.5"/>
+                                                <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4st-A8-Y2C">
+                                                    <rect key="frame" x="312" y="11" width="30" height="34.5"/>
                                                     <state key="normal" title="Play"/>
                                                 </button>
-                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6ge-DB-JKb">
-                                                    <rect key="frame" x="362" y="11" width="32" height="30.5"/>
+                                                <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6ge-DB-JKb">
+                                                    <rect key="frame" x="362" y="11" width="32" height="34.5"/>
                                                     <state key="normal" title="Stop"/>
                                                 </button>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0al-DO-u2Y">
-                                                    <rect key="frame" x="20" y="11" width="42" height="30.5"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0al-DO-u2Y">
+                                                    <rect key="frame" x="20" y="11" width="42" height="34.5"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wTa-DQ-IBn">
-                                                    <rect key="frame" x="112" y="11" width="49" height="30.5"/>
+                                                <textField opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="tsU-7e-SOe">
+                                                    <rect key="frame" x="79" y="11" width="144" height="34.5"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="170" id="Yle-DM-s4T"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                    <textInputTraits key="textInputTraits"/>
+                                                </textField>
+                                                <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wTa-DQ-IBn">
+                                                    <rect key="frame" x="243" y="11" width="49" height="34.5"/>
                                                     <state key="normal" title="Record"/>
                                                     <connections>
                                                         <action selector="recordAudio:" destination="DyK-Ph-yqi" eventType="touchUpInside" id="w4v-62-nAm"/>
@@ -57,24 +57,29 @@
                                                 </button>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstAttribute="bottomMargin" secondItem="0al-DO-u2Y" secondAttribute="bottom" id="DCV-uG-Pvg"/>
-                                                <constraint firstItem="0al-DO-u2Y" firstAttribute="top" secondItem="BBQ-R8-VJt" secondAttribute="topMargin" id="KvC-Uf-k3b"/>
-                                                <constraint firstAttribute="bottomMargin" secondItem="6ge-DB-JKb" secondAttribute="bottom" id="Omb-v4-ftU"/>
-                                                <constraint firstAttribute="bottomMargin" secondItem="4st-A8-Y2C" secondAttribute="bottom" id="TlO-pz-fwq"/>
-                                                <constraint firstItem="6ge-DB-JKb" firstAttribute="trailing" secondItem="BBQ-R8-VJt" secondAttribute="trailingMargin" id="Vlb-uq-FHP"/>
-                                                <constraint firstItem="4st-A8-Y2C" firstAttribute="top" secondItem="BBQ-R8-VJt" secondAttribute="topMargin" id="am0-XO-mX3"/>
-                                                <constraint firstItem="4st-A8-Y2C" firstAttribute="leading" secondItem="wTa-DQ-IBn" secondAttribute="trailing" constant="80" id="cVA-T6-6O5"/>
-                                                <constraint firstAttribute="bottomMargin" secondItem="wTa-DQ-IBn" secondAttribute="bottom" id="eA7-Us-CUv"/>
-                                                <constraint firstItem="0al-DO-u2Y" firstAttribute="leading" secondItem="BBQ-R8-VJt" secondAttribute="leadingMargin" id="j5X-ek-BEr"/>
-                                                <constraint firstItem="wTa-DQ-IBn" firstAttribute="leading" secondItem="0al-DO-u2Y" secondAttribute="trailing" constant="50" id="q0c-zG-EnC"/>
-                                                <constraint firstItem="wTa-DQ-IBn" firstAttribute="top" secondItem="BBQ-R8-VJt" secondAttribute="topMargin" id="uBh-rV-bcn"/>
-                                                <constraint firstItem="6ge-DB-JKb" firstAttribute="top" secondItem="BBQ-R8-VJt" secondAttribute="topMargin" id="zmH-tI-aG2"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="tsU-7e-SOe" secondAttribute="bottom" id="49l-VW-Gmg"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="0al-DO-u2Y" secondAttribute="bottom" id="6De-c2-TAi"/>
+                                                <constraint firstItem="tsU-7e-SOe" firstAttribute="top" secondItem="BBQ-R8-VJt" secondAttribute="topMargin" id="Cuc-Ui-DXo"/>
+                                                <constraint firstItem="wTa-DQ-IBn" firstAttribute="leading" secondItem="tsU-7e-SOe" secondAttribute="trailing" constant="20" id="Hrl-m4-YfF"/>
+                                                <constraint firstItem="tsU-7e-SOe" firstAttribute="leading" secondItem="0al-DO-u2Y" secondAttribute="trailing" constant="20" id="K6b-Dy-x98"/>
+                                                <constraint firstItem="0al-DO-u2Y" firstAttribute="top" secondItem="BBQ-R8-VJt" secondAttribute="topMargin" id="KHk-Xl-PXd"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="6ge-DB-JKb" secondAttribute="bottom" id="KcC-P0-iCa"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="4st-A8-Y2C" secondAttribute="bottom" id="PaK-mM-S7K"/>
+                                                <constraint firstItem="6ge-DB-JKb" firstAttribute="leading" secondItem="4st-A8-Y2C" secondAttribute="trailing" constant="20" id="Udd-Z8-Gmz"/>
+                                                <constraint firstItem="6ge-DB-JKb" firstAttribute="top" secondItem="BBQ-R8-VJt" secondAttribute="topMargin" id="b3r-pP-OPu"/>
+                                                <constraint firstItem="4st-A8-Y2C" firstAttribute="top" secondItem="BBQ-R8-VJt" secondAttribute="topMargin" id="bMn-zx-xg1"/>
+                                                <constraint firstItem="6ge-DB-JKb" firstAttribute="trailing" secondItem="BBQ-R8-VJt" secondAttribute="trailingMargin" id="hLp-jn-ZQe"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="wTa-DQ-IBn" secondAttribute="bottom" id="jem-y1-90i"/>
+                                                <constraint firstItem="0al-DO-u2Y" firstAttribute="leading" secondItem="BBQ-R8-VJt" secondAttribute="leadingMargin" id="m1R-XT-MjJ"/>
+                                                <constraint firstItem="wTa-DQ-IBn" firstAttribute="top" secondItem="BBQ-R8-VJt" secondAttribute="topMargin" id="vIz-RZ-dHM"/>
+                                                <constraint firstItem="4st-A8-Y2C" firstAttribute="leading" secondItem="wTa-DQ-IBn" secondAttribute="trailing" constant="20" id="yBh-m3-cjj"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
+                                            <outlet property="audioIndexLabel" destination="0al-DO-u2Y" id="06t-Fo-Nog"/>
+                                            <outlet property="audioTitleText" destination="tsU-7e-SOe" id="gBp-LS-31A"/>
                                             <outlet property="playButton" destination="4st-A8-Y2C" id="fOA-Br-qC8"/>
                                             <outlet property="recordButton" destination="wTa-DQ-IBn" id="NFS-mR-6gm"/>
-                                            <outlet property="recordLabel" destination="0al-DO-u2Y" id="06t-Fo-Nog"/>
                                             <outlet property="stopButton" destination="6ge-DB-JKb" id="owx-wy-f8u"/>
                                         </connections>
                                     </tableViewCell>
@@ -84,12 +89,20 @@
                                     <outlet property="delegate" destination="BYZ-38-t0r" id="xzx-qV-hU8"/>
                                 </connections>
                             </tableView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="4bB-Mx-nuN">
+                                <rect key="frame" x="313" y="44" width="81" height="44"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Add Data"/>
+                                <connections>
+                                    <action selector="touchUpAddButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="6sf-1d-O8e"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="CUv-im-zOK" secondAttribute="bottom" id="1iw-5o-eYA"/>
+                            <constraint firstItem="CUv-im-zOK" firstAttribute="top" secondItem="4bB-Mx-nuN" secondAttribute="bottom" constant="30" id="CNE-oW-7yb"/>
                             <constraint firstItem="CUv-im-zOK" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="CUP-oF-dlw"/>
-                            <constraint firstItem="CUv-im-zOK" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="GDc-xp-IxY"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="CUv-im-zOK" secondAttribute="trailing" id="QLE-hA-X2b"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
@@ -100,7 +113,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="139" y="138"/>
+            <point key="canvasLocation" x="137.68115942028987" y="137.94642857142856"/>
         </scene>
     </scenes>
 </document>
