--- a/MulLe/Base.lproj/Main.storyboard
+++ b/MulLe/Base.lproj/Main.storyboard
@@ -15,41 +15,43 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="CUv-im-zOK">
-                                <rect key="frame" x="0.0" y="118" width="414" height="744"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="CUv-im-zOK">
+                                <rect key="frame" x="0.0" y="114" width="414" height="755"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" id="DyK-Ph-yqi" customClass="CustomTableViewCell" customModule="MulLe" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="28" width="414" height="56.5"/>
+                                        <rect key="frame" x="0.0" y="28" width="414" height="43.5"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="DyK-Ph-yqi" id="BBQ-R8-VJt">
-                                            <rect key="frame" x="0.0" y="0.0" width="414" height="56.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4st-A8-Y2C">
-                                                    <rect key="frame" x="312" y="11" width="30" height="34.5"/>
+                                                    <rect key="frame" x="332" y="7" width="30" height="30"/>
                                                     <state key="normal" title="Play"/>
                                                 </button>
-                                                <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6ge-DB-JKb">
-                                                    <rect key="frame" x="362" y="11" width="32" height="34.5"/>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6ge-DB-JKb">
+                                                    <rect key="frame" x="372" y="7" width="32" height="30"/>
                                                     <state key="normal" title="Stop"/>
                                                 </button>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0al-DO-u2Y">
-                                                    <rect key="frame" x="20" y="11" width="42" height="34.5"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0al-DO-u2Y">
+                                                    <rect key="frame" x="30" y="11.5" width="42" height="20.5"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <textField opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="tsU-7e-SOe">
-                                                    <rect key="frame" x="79" y="11" width="144" height="34.5"/>
+                                                    <rect key="frame" x="80" y="5" width="183" height="34"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="width" constant="170" id="Yle-DM-s4T"/>
+                                                        <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="150" id="cXN-QG-P3i"/>
+                                                        <constraint firstAttribute="width" relation="lessThanOrEqual" constant="150" id="ucl-ua-5fM"/>
                                                     </constraints>
                                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                     <textInputTraits key="textInputTraits"/>
                                                 </textField>
                                                 <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wTa-DQ-IBn">
-                                                    <rect key="frame" x="243" y="11" width="49" height="34.5"/>
+                                                    <rect key="frame" x="273" y="7" width="49" height="30"/>
                                                     <state key="normal" title="Record"/>
                                                     <connections>
                                                         <action selector="recordAudio:" destination="DyK-Ph-yqi" eventType="touchUpInside" id="w4v-62-nAm"/>
@@ -57,22 +59,16 @@
                                                 </button>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstAttribute="bottomMargin" secondItem="tsU-7e-SOe" secondAttribute="bottom" id="49l-VW-Gmg"/>
-                                                <constraint firstAttribute="bottomMargin" secondItem="0al-DO-u2Y" secondAttribute="bottom" id="6De-c2-TAi"/>
-                                                <constraint firstItem="tsU-7e-SOe" firstAttribute="top" secondItem="BBQ-R8-VJt" secondAttribute="topMargin" id="Cuc-Ui-DXo"/>
-                                                <constraint firstItem="wTa-DQ-IBn" firstAttribute="leading" secondItem="tsU-7e-SOe" secondAttribute="trailing" constant="20" id="Hrl-m4-YfF"/>
-                                                <constraint firstItem="tsU-7e-SOe" firstAttribute="leading" secondItem="0al-DO-u2Y" secondAttribute="trailing" constant="20" id="K6b-Dy-x98"/>
-                                                <constraint firstItem="0al-DO-u2Y" firstAttribute="top" secondItem="BBQ-R8-VJt" secondAttribute="topMargin" id="KHk-Xl-PXd"/>
-                                                <constraint firstAttribute="bottomMargin" secondItem="6ge-DB-JKb" secondAttribute="bottom" id="KcC-P0-iCa"/>
-                                                <constraint firstAttribute="bottomMargin" secondItem="4st-A8-Y2C" secondAttribute="bottom" id="PaK-mM-S7K"/>
-                                                <constraint firstItem="6ge-DB-JKb" firstAttribute="leading" secondItem="4st-A8-Y2C" secondAttribute="trailing" constant="20" id="Udd-Z8-Gmz"/>
-                                                <constraint firstItem="6ge-DB-JKb" firstAttribute="top" secondItem="BBQ-R8-VJt" secondAttribute="topMargin" id="b3r-pP-OPu"/>
-                                                <constraint firstItem="4st-A8-Y2C" firstAttribute="top" secondItem="BBQ-R8-VJt" secondAttribute="topMargin" id="bMn-zx-xg1"/>
-                                                <constraint firstItem="6ge-DB-JKb" firstAttribute="trailing" secondItem="BBQ-R8-VJt" secondAttribute="trailingMargin" id="hLp-jn-ZQe"/>
-                                                <constraint firstAttribute="bottomMargin" secondItem="wTa-DQ-IBn" secondAttribute="bottom" id="jem-y1-90i"/>
-                                                <constraint firstItem="0al-DO-u2Y" firstAttribute="leading" secondItem="BBQ-R8-VJt" secondAttribute="leadingMargin" id="m1R-XT-MjJ"/>
-                                                <constraint firstItem="wTa-DQ-IBn" firstAttribute="top" secondItem="BBQ-R8-VJt" secondAttribute="topMargin" id="vIz-RZ-dHM"/>
-                                                <constraint firstItem="4st-A8-Y2C" firstAttribute="leading" secondItem="wTa-DQ-IBn" secondAttribute="trailing" constant="20" id="yBh-m3-cjj"/>
+                                                <constraint firstItem="tsU-7e-SOe" firstAttribute="centerY" secondItem="BBQ-R8-VJt" secondAttribute="centerY" id="DoQ-Vb-edH"/>
+                                                <constraint firstItem="4st-A8-Y2C" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="wTa-DQ-IBn" secondAttribute="trailing" constant="10" id="G1J-S8-lpm"/>
+                                                <constraint firstItem="4st-A8-Y2C" firstAttribute="centerY" secondItem="BBQ-R8-VJt" secondAttribute="centerY" id="Sob-fy-eE5"/>
+                                                <constraint firstItem="6ge-DB-JKb" firstAttribute="trailing" secondItem="BBQ-R8-VJt" secondAttribute="trailingMargin" constant="10" id="UO0-m8-rdV"/>
+                                                <constraint firstItem="wTa-DQ-IBn" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="tsU-7e-SOe" secondAttribute="trailing" constant="10" id="iDc-G2-btJ"/>
+                                                <constraint firstItem="0al-DO-u2Y" firstAttribute="centerY" secondItem="BBQ-R8-VJt" secondAttribute="centerY" id="ijN-RM-ARz"/>
+                                                <constraint firstItem="6ge-DB-JKb" firstAttribute="centerY" secondItem="BBQ-R8-VJt" secondAttribute="centerY" id="tIu-st-eM2"/>
+                                                <constraint firstItem="0al-DO-u2Y" firstAttribute="leading" secondItem="BBQ-R8-VJt" secondAttribute="leadingMargin" constant="10" id="v0F-WS-d6z"/>
+                                                <constraint firstItem="6ge-DB-JKb" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="4st-A8-Y2C" secondAttribute="trailing" constant="10" id="wwH-tT-zKD"/>
+                                                <constraint firstItem="wTa-DQ-IBn" firstAttribute="centerY" secondItem="BBQ-R8-VJt" secondAttribute="centerY" id="xLP-KA-Gqn"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
@@ -89,22 +85,16 @@
                                     <outlet property="delegate" destination="BYZ-38-t0r" id="xzx-qV-hU8"/>
                                 </connections>
                             </tableView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="4bB-Mx-nuN">
-                                <rect key="frame" x="313" y="44" width="81" height="44"/>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="guC-Uy-IoS">
+                                <rect key="frame" x="364" y="69" width="30" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Add Data"/>
+                                <state key="normal" title="Add"/>
                                 <connections>
-                                    <action selector="touchUpAddButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="6sf-1d-O8e"/>
+                                    <action selector="touchUpAddButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Py2-YW-Rf5"/>
                                 </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                        <constraints>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="CUv-im-zOK" secondAttribute="bottom" id="1iw-5o-eYA"/>
-                            <constraint firstItem="CUv-im-zOK" firstAttribute="top" secondItem="4bB-Mx-nuN" secondAttribute="bottom" constant="30" id="CNE-oW-7yb"/>
-                            <constraint firstItem="CUv-im-zOK" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="CUP-oF-dlw"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="CUv-im-zOK" secondAttribute="trailing" id="QLE-hA-X2b"/>
-                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <connections>
@@ -113,7 +103,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="137.68115942028987" y="137.94642857142856"/>
+            <point key="canvasLocation" x="-100.00000000000001" y="40.848214285714285"/>
         </scene>
     </scenes>
 </document>
