--- a/MulLe/Base.lproj/Main.storyboard
+++ b/MulLe/Base.lproj/Main.storyboard
@@ -27,11 +27,8 @@
                                     </navigationItem>
                                 </items>
                             </navigationBar>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Dda-vW-BBu">
-                                <rect key="frame" x="50" y="822" width="50" height="30"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="50" id="fkt-92-8ba"/>
-                                </constraints>
+                            <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="249" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Dda-vW-BBu">
+                                <rect key="frame" x="50" y="822" width="64" height="30"/>
                                 <state key="normal" title="Record"/>
                                 <connections>
                                     <action selector="touchDownRecord:" destination="BYZ-38-t0r" eventType="touchDown" id="2B8-UK-OFh"/>
@@ -39,7 +36,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="L7j-tY-JOy">
-                                <rect key="frame" x="300" y="822" width="64" height="30"/>
+                                <rect key="frame" x="314" y="822" width="50" height="30"/>
                                 <state key="normal" title="Play All"/>
                                 <connections>
                                     <action selector="playAllAudios:" destination="BYZ-38-t0r" eventType="touchUpInside" id="0BX-nP-PoT"/>
@@ -59,7 +56,7 @@
                                                 <stackView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="zQa-6M-jGZ">
                                                     <rect key="frame" x="0.0" y="-10" width="414" height="90"/>
                                                     <subviews>
-                                                        <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="text view: text recognized" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="Zkz-DJ-hL5">
+                                                        <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" pagingEnabled="YES" editable="NO" text="text view: text recognized" textAlignment="natural" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Zkz-DJ-hL5">
                                                             <rect key="frame" x="0.0" y="0.0" width="414" height="60"/>
                                                             <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                                             <constraints>
@@ -116,7 +113,7 @@
                                                                     <rect key="frame" x="384" y="0.0" width="30" height="30"/>
                                                                     <state key="normal" title="Play"/>
                                                                     <connections>
-                                                                        <action selector="playAudio:" destination="DyK-Ph-yqi" eventType="touchUpInside" id="Y6H-2N-PrG"/>
+                                                                        <action selector="playAudio:" destination="DyK-Ph-yqi" eventType="touchUpInside" id="lFa-N8-f1B"/>
                                                                     </connections>
                                                                 </button>
                                                             </subviews>
